update ui and api to create wworkspace and board

--- a/src/component/container/sidebar/sidebar.css
+++ b/src/component/container/sidebar/sidebar.css
@@ -1,4 +1,4 @@
-.sidebar{
+/* .sidebar{
 background-color:hsl(242, 56.9%, 15%);
 width:250px;
 height:100%;
@@ -24,5 +24,5 @@ i{
 .icon-down-setting{
     margin-left: 44px;
     font-size: 13px;
-}
+} */
 
