--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -73,7 +73,7 @@ margin-right: 12px;
 }
 .list-setting li:hover{
     background-color: gray;
-}
+} */
 
 
 
