--- a/src/component/container/navbar/navbar.css
+++ b/src/component/container/navbar/navbar.css
@@ -1,4 +1,4 @@
-.navbar{
+/* .navbar{
 background-color:hsl(242, 56.9%, 15%);
 height:80px;
 color: white;
@@ -46,6 +46,6 @@ justify-content: space-between;
     border-radius: 10px;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: 500;
-}
+} */
 
 
