--- a/src/component/container/container.css
+++ b/src/component/container/container.css
@@ -2,7 +2,7 @@
     display: flex;
     height: calc(100vh - 70px);
     width: 100%;
-    background-color: aliceblue;
+    background-color: white;
     
 
     
