--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 .trello{
   width: 100%;
   height: 100vh;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif
-  
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
+  margin:0px;
+  padding: 0px;
 }
